Hide/show branch select list to prevent flicker
When a <select> list is mounted to the DOM, it seems that the first
element is displayed immediately, and then the selected item is
displayed. Since we were re-mounting the select list after creating a
new branch in the mini editor there would be a flicker before the branch
name displayed correctly. We fixed this by simply hiding/showing the
select list rather than removing it from the DOM.

--- a/styles/branch-menu-view.less
+++ b/styles/branch-menu-view.less
@@ -2,6 +2,10 @@
 
 .github-BranchMenuView {
 
+  .hidden {
+    display: none
+  }
+
   &-selector {
     display: flex;
     align-items: center;
